--- a/src/App.css
+++ b/src/App.css
@@ -3,24 +3,37 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  
   height: 40vmin;
   pointer-events: none;
+  background: transparent;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url("https://comps.canstockphoto.com/old-lined-paper-in-a-notepad-stock-photography_csp4008540.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(14px + 2vmin);
+  color: rgb(83, 76, 76);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #1c5cd3;
+}
+
+.bttnlogProvider{
+  background-image: url("https://www.1-stopmedia.com/wp-content/uploads/2016/08/097668-black-ink-grunge-stamp-textures-icon-social-media-logos-facebook-logo-square.png");
+  width:16rem;
+  height: 2rem;
+  background-size: 2rem;
+  background-image: transparent;  
+  margin: 1rem;
 }
 
 @keyframes App-logo-spin {
