--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /*-webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;*/
+  background-image: https://previews.123rf.com/images/briancweed/briancweed1503/briancweed150300217/37599058-vintage-lined-notebook-paper.jpg;
 }
 
 code {
