--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,29 @@
 @font-face {
-font-family: berton;
+font-family: 'Pangolin', cursive;
 src: url(../src/berton.ttf);
 }
 body {
   margin: 0;
-  font-family: berton;
-  text-align: left;
+  text-align: center;
+  font-family: 'Pangolin', cursive;
 }
-header {
+
+.App {
   background-image: url("https://i.ibb.co/sb70wkT/Vintage-Notebook-Open-Pages-Old-Design-Shop.jpg");
   background-size:100% 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  font-size: 20px;
   margin-top: 0%;
+  font-size: 20px;
   color: #5E7C9A;
-  font-family: berton;
+  font-family: 'Pangolin', cursive;
   font-size: 28px;
 }
+.App.buttonsLog{
+  margin: 18%;
+}
 code {
-  font-family: berton;
+  font-family: 'Pangolin', cursive;
 }
 
 #title{
@@ -27,38 +31,66 @@ code {
   padding-left: 18%;
   }
 
-  Notes{
-    background-color: blueviolet;
-  
+  .notesHeader{
+    font-family: 'Pangolin', cursive;
+  }
+  .notesBody{
+  margin-top: 30px;
+  }
+  .notesFooter{
+    bottom: 0%;
+    position: fixed;
+    left: 0%;
+    width: 100%;
+  }
+  .notesContainer{
+    background-image: url("https://i.ibb.co/sb70wkT/Vintage-Notebook-Open-Pages-Old-Design-Shop.jpg");
+  background-size:100% 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-size: 20px;
+  margin-top: 0%;
+  color: #5E7C9A;
+  font-family: 'Pangolin', cursive;
+  font-size: 28px;
   }
   .monday {
-    background-color: #e7f3fe;
-    border-left: 6px solid rgb(87, 168, 235);
+    background-color: rgba(231, 243, 254, .4);
+    border-left: 6px solid rgba(87, 168, 235);
   }
   
   .tuesday {
-    background-color: #f5d7a6;
+    background-color: rgba(245, 215, 166, .4);
     border-left: 6px solid #e08d4a;
   }
   
   .wednesday {
-    background-color: #fcb3c5;
+    background-color: rgba(252, 179, 197, .4);
     border-left: 6px solid#eb426c
   }
   .thursday {
-    background-color: #C7ADE0;
+    background-color: rgba(199, 173, 224, .4);
     border-left: 6px solid rgb(143, 80, 202);
   }
   .friday {
-    background-color: #9cffbe;
+    background-color: rgba(99, 241, 149, 0.4);
     border-left: 6px solid #31d66b;
   }
   .saturday {
-    background-color: #C9A490;
+    background-color: rgba(201, 164, 144, .4);
     border-left: 6px solid rgb(143, 101, 77);
   }
   .sunday {
-    background-color: #EFCB8A;
+    background-color: rgba(239, 203, 138, .4);
     border-left: 6px solid #DE9A1B;
   }
-  
+.addNote{
+  background-color: rgba(184, 195, 206, 0.4);
+    border-left: 6px solid rgb(82, 111, 134);
+    padding: 20px;
+}  
+.newNoteButton{
+  padding: 20px;
+  font-family: 'Pangolin', cursive;
+   background-color: rgb(82, 111, 134);
+}
